--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@react-three/drei": "^9.96.5",
     "@react-three/fiber": "^8.15.15",
     "framer-motion": "^11.0.3",
