--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.96.5",
     "@react-three/fiber": "^8.15.15",
     "framer-motion": "^11.0.3",
+    "motion": "^12.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
